--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -23,6 +23,6 @@ workflows:
       - build/**/*.ipa
     publishing:
       app_store_connect:
-        auth: integration
+        auth: api_key
         submit_to_testflight: false
         submit_to_app_store: true
