--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -20,6 +20,6 @@ workflows:
       - build/**/*.ipa
     publishing:
       app_store_connect:
-        auth: api_key
-        submit_to_testflight: false
+        auth: integration
+        submit_to_testflight: true
         submit_to_app_store: true
