--- a/ios/exportOptions.plist
+++ b/ios/exportOptions.plist
@@ -14,5 +14,7 @@
     <false/>
     <key>destination</key>
     <string>export</string>
+    <key>signingStyle</key>
+    <string>automatic</string>
 </dict>
 </plist>
