--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -63,6 +63,6 @@ workflows:
       - build/**/*.ipa
     publishing:
       app_store_connect:
-        auth: integration
+        auth: api_key
         submit_to_testflight: true     # TestFlight pour tester avant App Store
         submit_to_app_store: true
