--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -7,9 +7,9 @@ workflows:
       cocoapods: default
       node: 18
       vars:
-        APP_STORE_CONNECT_ISSUER_ID: $APP_STORE_CONNECT_ISSUER_ID
-        APP_STORE_CONNECT_KEY_IDENTIFIER: $APP_STORE_CONNECT_KEY_IDENTIFIER
-        APP_STORE_CONNECT_PRIVATE_KEY: $APP_STORE_CONNECT_PRIVATE_KEY
+        APP_STORE_CONNECT_ISSUER_ID: ${{ inputs.APP_STORE_CONNECT_ISSUER_ID }}
+        APP_STORE_CONNECT_KEY_IDENTIFIER: ${{ inputs.APP_STORE_CONNECT_KEY_IDENTIFIER }}
+        APP_STORE_CONNECT_PRIVATE_KEY: ${{ inputs.APP_STORE_CONNECT_PRIVATE_KEY }}
     scripts:
       - name: Install dependencies
         script: |
@@ -63,6 +63,6 @@ workflows:
       - build/**/*.ipa
     publishing:
       app_store_connect:
-        auth: api_key
+        auth: integration
         submit_to_testflight: true     # TestFlight pour tester avant App Store
         submit_to_app_store: true
