--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -63,6 +63,7 @@ workflows:
       - build/**/*.ipa
     publishing:
       app_store_connect:
-        auth: integration
+        auth: ${{ inputs.APP_STORE_CONNECT_AUTH }}
         submit_to_testflight: true     # TestFlight pour tester avant App Store
         submit_to_app_store: true
+        
