--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,29 +1,64 @@
 workflows:
   ios-production:
     name: iOS Production
+    max_build_duration: 120
+    instance_type: mac_mini_m2
     environment:
+      groups:
+        - ios_creds # <-- (group contains variables: APP_STORE_CONNECT_ISSUER_ID, APP_STORE_CONNECT_KEY_IDENTIFIER, APP_STORE_CONNECT_PRIVATE_KEY)
+      vars:
+        XCODE_WORKSPACE: "ios/Mayombe.xcworkspace"
+        XCODE_SCHEME: "Mayombe"
+        BUNDLE_ID: "com.thprojet.mayombeclient"
+        APP_STORE_APP_ID: 6752300369 # Remplacez par votre App Store App ID
+      node: 18
       xcode: 15.4
       cocoapods: default
-      node: 18
-      ios_signing:
-        distribution_type: app-store
-        bundle_identifier: ${{ inputs.BUNDLE_IDENTIFIER }}
+    triggering:
+      events:
+        - push
+        - tag
+      branch_patterns:
+        - pattern: "main"
+          include: true
+          source: true
+    cache:
+      cache_paths:
+        - $HOME/Library/Caches/CocoaPods
     scripts:
       - name: Install dependencies
         script: |
           npm install
-          cd ios && pod install && cd ..
-      - name: Build iOS
+      - name: Install CocoaPods dependencies
         script: |
-          xcode-project build-ipa \
-            --workspace "ios/Mayombe.xcworkspace" \
-            --scheme "Mayombe" \
-            --archive-path "build/Mayombe.xcarchive"
+          cd ios && pod install
+      - name: Set up keychain to be used for codesigning using Codemagic CLI 'keychain' command
+        script: |
+          keychain initialize
+      - name: Fetch signing files
+        script: |
+          app-store-connect fetch-signing-files "$BUNDLE_ID" --type IOS_APP_STORE --create
+      - name: Use system default keychain
+        script: |
+          keychain add-certificates
+      - name: Increment build number
+        script: |
+          set -ex
+          cd ios && agvtool new-version -all $(($(app-store-connect get-latest-testflight-build-number "$APP_STORE_APP_ID") + 1))
+      - name: Set up code signing settings on Xcode project
+        script: |
+          xcode-project use-profiles --warn-only
+      - name: Build ipa for distribution
+        script: |
+          xcode-project build-ipa --workspace "$XCODE_WORKSPACE" --scheme "$XCODE_SCHEME"
     artifacts:
-      - build/*.ipa
-      - build/*.dSYM.zip
+      - build/ios/ipa/*.ipa
+      - /tmp/xcodebuild_logs/*.log
+      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
+      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
     publishing:
       app_store_connect:
-        auth: integration
-        apple_id: contact@mayombe-app.com
+        api_key: $APP_STORE_CONNECT_PRIVATE_KEY
+        key_id: $APP_STORE_CONNECT_KEY_IDENTIFIER
+        issuer_id: $APP_STORE_CONNECT_ISSUER_ID
         submit_to_testflight: true
