Complete Codemagic configuration with App Store Connect credentials

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,6 +4,9 @@ workflows:
     max_build_duration: 120
     instance_type: mac_mini_m2
     environment:
+      ios_signing:
+        distribution_type: app_store
+        bundle_identifier: com.thprojet.mayombeclient
       vars:
         XCODE_WORKSPACE: "ios/Mayombe.xcworkspace"
         XCODE_SCHEME: "Mayombe"
