--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,9 +4,6 @@ workflows:
     max_build_duration: 120
     instance_type: mac_mini_m2
     environment:
-      ios_signing:
-        distribution_type: app_store
-        bundle_identifier: com.thprojet.mayombeclient
       vars:
         XCODE_WORKSPACE: "ios/Mayombe.xcworkspace"
         XCODE_SCHEME: "Mayombe"
@@ -51,7 +48,7 @@ workflows:
           cd ios && agvtool new-version -all $(($(app-store-connect get-latest-testflight-build-number "$APP_STORE_APP_ID") + 1))
       - name: Set up code signing settings on Xcode project
         script: |
-          xcode-project use-profiles --warn-only
+          xcode-project use-profiles
       - name: Build ipa for distribution
         script: |
           xcode-project build-ipa --workspace "$XCODE_WORKSPACE" --scheme "$XCODE_SCHEME"
