--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
     "firebase": "^12.1.0",
     "install": "^0.13.0",
     "lottie-react-native": "7.1.0",
-    "nativewind": "^4.1.23",
+    "nativewind": "^4.2.1",
     "react": "18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.76.9",
     "react-native-animatable": "^1.4.0",
     "react-native-country-picker-modal": "^2.0.0",
+    "react-native-css-interop": "^0.2.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "~2.20.2",
@@ -72,7 +73,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.28.4",
     "@react-native-community/cli": "^12.3.5",
     "@react-native-community/cli-platform-android": "^12.3.5",
     "eas-cli": "^16.17.4",
