--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-cache-hoc": "^2.0.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.18.0",
     "react-native-maps-directions": "^1.9.0",
