--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -91,8 +91,8 @@ android {
         applicationId 'com.mayombe.app'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 13
-        versionName "1.0.8"
+        versionCode 15
+        versionName "1.2.2"
         
         // Support for 16KB page sizes (Android 15 requirement)
         ndk {
@@ -134,6 +134,8 @@ android {
         jniLibs {
             useLegacyPackaging false
         }
+        // Ensure proper alignment for 16KB pages
+        pickFirsts += ['**/libc++_shared.so', '**/libjsc.so']
     }
     androidResources {
         ignoreAssetsPattern '!.svn:!.git:!.ds_store:!*.scc:!CVS:!thumbs.db:!picasa.ini:!*~'
