--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -55,6 +55,9 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 # Use legacy packaging to compress native libraries in the resulting APK.
 expo.useLegacyPackaging=false
 
+# Enable 16KB page size support for Android 15+
+android.enable16KbPageSizeSupport=true
+
 # Mayombe Release Keystore Configuration
 MYAPP_UPLOAD_STORE_FILE=mayombe-release-key.keystore
 MYAPP_UPLOAD_KEY_ALIAS=mayombe-key-alias
