feat: fix push notifications iOS and apply 7% markup to restaurant products
- Updated push notification service to use FCM REST v1
- Added diagnostic scripts for push (get-fcm-token, test-fcm-rest)
- Applied 7% markup on restaurant product modal and lists
- Updated .gitignore to exclude sensitive files
- General project configuration updates

--- a/.gitignore
+++ b/.gitignore
@@ -75,4 +75,16 @@ yarn-error.*
 # typescript
 *.tsbuildinfo
 
-# @end expo-cli
+# Firebase & Apple Secrets
+*.json
+!package.json
+!package-lock.json
+!app.json
+!google-services.json
+!google-services-info.json
+*.p8
+*.p12
+*.cer
+*.plist
+!GoogleService-Info.plist
+mayombe-ba11b-firebase-adminsdk-*.json
