--- a/app.json
+++ b/app.json
@@ -69,6 +69,10 @@
       }
     },
     "newArchEnabled": false,
-    "owner": "thprojet"
+    "owner": "thprojet",
+    "plugins": [
+      "@react-native-firebase/app",
+      "@react-native-firebase/messaging"
+    ]
   }
 }
