Fix(Payment): Resolve toLocaleString error and navigation params

--- a/ios/Mayombe/Info.plist
+++ b/ios/Mayombe/Info.plist
@@ -7,7 +7,7 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>$(DEVELOPMENT_LANGUAGE)</string>
     <key>CFBundleDisplayName</key>
-    <string>mayombeclient</string>
+    <string>Mayombe App</string>
     <key>CFBundleExecutable</key>
     <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIdentifier</key>
@@ -19,7 +19,7 @@
     <key>CFBundlePackageType</key>
     <string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
     <key>CFBundleShortVersionString</key>
-    <string>1.2.2</string>
+    <string>1.2.5</string>
     <key>CFBundleSignature</key>
     <string>????</string>
     <key>CFBundleURLTypes</key>
@@ -38,7 +38,7 @@
       </dict>
     </array>
     <key>CFBundleVersion</key>
-    <string>18</string>
+    <string>19</string>
     <key>GMSApiKey</key>
     <string>AIzaSyBH1IRNXPqsDDfIJItSb3hUJ1Q6gkqAcsI</string>
     <key>LSMinimumSystemVersion</key>
