--- a/admin/package.json
+++ b/admin/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "mayombe-admin",
+  "name": "mayombe-admin-dashboard",
+  "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
@@ -10,10 +11,18 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0",
+    "axios": "^1.6.2",
+    "lucide-react": "^0.294.0",
     "firebase": "^10.7.1"
   },
   "devDependencies": {
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
     "vite": "^5.0.8"
   }
 }
