Fix: Correction prix promo dans panier et améliorations admin
- Fix: Correction du calcul du prix promo dans le panier (utilise maintenant promoPrice au lieu du prix normal)
- Fix: Conservation des informations de promo (hasPromo, promoPrice, originalPrice) lors de l'ajout au panier
- Amélioration: Dashboard admin avec statistiques dynamiques et filtres par période
- Amélioration: Récupération de tous les produits de tous les sous-menus dans la page Promotions
- Amélioration: Design sidebar et dashboard avec couleurs orange/vert du logo
- Amélioration: Configuration Firebase multi-sites pour admin-mayombe.web.app
- Nettoyage: Suppression des logs de débogage
- Mise à jour: Version app 1.2.8 (versionCode 19)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mayombe",
-  "version": "1.2.2",
+  "version": "1.2.8",
   "main": "index.js",
   "scripts": {
     "start": "expo start",
@@ -11,6 +11,7 @@
     "prebuild": "npx expo prebuild",
     "clean": "cd android && ./gradlew clean && cd ..",
     "bundle": "npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle",
+    "deploy:admin": "cd admin && npm run build && cd .. && firebase deploy --only hosting",
     "postinstall": "npm install --legacy-peer-deps || true && node ./scripts/fix-lightningcss.js || true",
     "prepare": "node ./scripts/fix-lightningcss.js || true"
   },
