--- a/firebase-functions/package.json
+++ b/firebase-functions/package.json
@@ -9,48 +9,14 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "18"
+    "node": "20"
   },
   "main": "index.js",
   "dependencies": {
+    "axios": "^1.13.5",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.5.0"
   },
-  "devDependencies": {
-    "firebase-functions-test": "^3.1.0"
-  },
+  "devDependencies": {},
   "private": true
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
